# api/dto/api.go
@@ -5,3 +5,16 @@ type APIResponse struct {
 	Message    string      `json:"message"`
 	Data       interface{} `json:"data"`
 }
+
+type SearchParams struct {
+	PageNum  int    `json:"page_num"`
+	PageSize int    `json:"page_size"`
+	Sort     string `json:"sort"`
+	Search   string `json:"search"`
+	Unix     int64  `json:"unix"`
+	Symbol   string `json:"symbol"`
+	Open     string `json:"open"`
+	High     string `json:"high"`
+	Low      string `json:"low"`
+	Close    string `json:"close"`
+}
